# snyd

./: ALFRED_RAYCAST_COMPARISON.md  Cargo.toml  README.md  SPOTLIGHT_COMPARISON.md  bench_external.sh
benches/: search.rs
src/: apps.rs  index.rs  kinds.rs  lib.rs  main.rs  persist.rs  pipeline.rs  protocol.rs  spotlight.rs  watcher.rs
